# pytemplate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.bin/: build  install  lint  post-clone  setup  test
.github/workflows/: python.yml
docs/: README.md  conf.py
docs/_src/: howdy.rst  index.rst
pytemplate/: __init__.py  howdy.py
test/: test_pytemplate_howdy.py
