[metadata]
description-file = README.md

[flake8]
per-file-ignores =
    **/__init__.py:F401
ignore = E501

[tool:pytest]
log_cli=true
addopts=--cov=pytemplate --cov-report=xml
testpaths=test

[mypy]
python_version = 3.8
files = pytemplate/**/*.py
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = silent
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[isort]
profile=black

[tool:black]
line-length = 88
extend-ignore = E203, W503
